--- a/buyant-construction/package.json
+++ b/buyant-construction/package.json
@@ -25,6 +25,7 @@
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "sqlite3": "^5.1.7",
