--- a/buyant-construction/package.json
+++ b/buyant-construction/package.json
@@ -10,7 +10,9 @@
     "db:seed": "tsx src/scripts/seed.ts",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "docker:build": "docker build -t buyant-construction .",
+    "docker:run": "docker run -p 3000:3000 buyant-construction"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
