--- a/buyant-construction/package.json
+++ b/buyant-construction/package.json
@@ -2,6 +2,7 @@
   "name": "buyant-construction",
   "version": "0.1.0",
   "private": true,
+  "description": "Буяант Барилга - Professional Construction Services in Mongolia",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
