--- a/buyant-construction/docker-compose.yml
+++ b/buyant-construction/docker-compose.yml
@@ -7,8 +7,24 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=file:./dev.db
+      - DATABASE_URL=postgresql://postgres:password@postgres:5432/buyant_construction
     volumes:
-      - ./prisma/dev.db:/app/prisma/dev.db
       - ./public/uploads:/app/public/uploads
+    depends_on:
+      - postgres
     restart: unless-stopped
+
+  postgres:
+    image: postgres:17-alpine
+    environment:
+      - POSTGRES_DB=buyant_construction
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
