--- a/buyant-construction/public/manifest.json
+++ b/buyant-construction/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Buyant Construction",
+  "name": "Buyant House",
   "short_name": "Buyant",
   "description": "Professional construction services and legal consultation in Mongolia",
   "start_url": "/",
